Remove horizontal scroll bar, fix social icons bg on conf pages

--- a/assets/css/conf.css
+++ b/assets/css/conf.css
@@ -167,6 +167,9 @@ div.conference a:hover {
 	color: white;
 }
 
+body {
+	background-color: #1D2D44;
+}
 div.conf-partners a {
 	border: none !important;
 }
